--- a/minecraft/index3.html
+++ b/minecraft/index3.html
@@ -10,24 +10,18 @@
     
     <center>
         <h1>Minecraft</h1>
-        <h2>Esse site é para aprender a jogar Minecraft</h2>
+        <h2>Esse site é para aprender a fazer farms no Minecraft</h2>
 
         <img src="image.png" alt="" style="width: 30%;">
         <p style="font-size: 30px; width: 60%; text-align: justify;">
-            Para criar uma casa automática no Minecraft, 
-            comece construindo uma estrutura com materiais básicos. 
-            Adicione uma porta automática usando redstone e placas de pressão. 
-            Crie um sistema de iluminação automática com sensores de luz para acender 
-            as lâmpadas conforme o dia e a noite. 
-            Instale um sistema de armazenamento automático com funis para coletar 
-            e organizar itens. Por fim, adicione defesas automáticas, como golems de 
-            ferro e armadilhas, para proteger sua casa de mobs.
+            Para criar uma farm no minecraft
+            comece assistindo este video para criar uma farm
+            de cana de açúcar, de lava e de bambu
         </p>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/NjjUYYKoR3g?si=_yFDPw1NzlcCyCOU" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-        encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KZX-HwW5gfI?si=SxhjUzuzpvpXdC7f"
+         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       
 
         <footer style="background-color: rgb(95, 95, 95); width: 60%;">
             <h1>Feito por claudinho</h1>
