--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="Pokemon\pokemon.html">
             <img src="Pokemon\pokémon image.jpg" alt="">
         </a>
-        <a href=minecraft\index3.html>
+        <a href=minecraft\minecraft.html>
             <img src="minecraft\image.png" alt="">
         </a>
     </center>
