--- a/minecraft/minecraft.html
+++ b/minecraft/minecraft.html
@@ -13,7 +13,7 @@
      <h2>Esse site é para aprender a fazer farms no Minecraft</h2>
  
      <img src="image.png" alt="" style="width: 30%;">
-     <p style="font-size: 30px; width: 60%; text-align: justify;">
+     <p style="font-size: 20%; width: 60%;">
       Para criar uma farm no minecraft
             comece assistindo este video para criar uma farm
             de cana de açúcar, de lava e de bambu
