--- a/minecraft/minecraft.html
+++ b/minecraft/minecraft.html
@@ -23,7 +23,7 @@
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
        
      
-     <footer style="background-color: rgb(255, 0, 0); width: 60%;">
+     <footer>
             <h1>© 2025 XP Point. Este site não é afiliado à nenhuma empresa.</h1>
      </footer>    
   
