--- a/minecraft/minecraft.html
+++ b/minecraft/minecraft.html
@@ -12,7 +12,7 @@
      <h1>Minecraft</h1>
      <h2>Esse site é para aprender a fazer farms no Minecraft</h2>
  
-     <img src="image.png" alt="" style="width: 30%;">
+     <img src="image.png" alt="minecraft foto" style="width: 30%;">
      <p>
       Para criar uma farm no minecraft
             comece assistindo este video para criar uma farm
