--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href=minecraft\minecraft.html>
             <img src="minecraft\image.png" alt="">
         </a>
+        <a href="pokémon cartas\carta pokémon.html"></a>
     </center>
 </nav>
 
