--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <img src="minecraft\image.png" alt="">
         </a>
         <a href="pokémon cartas\carta pokémon.html"></a>
+        <img src="pokémon cartas/carta.png" alt="">
     </center>
 </nav>
 
