--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <a href=minecraft\minecraft.html>
             <img src="minecraft\image.png" alt="">
         </a>
-        <a href="pokémon cartas\carta pokémon.html"></a>
-        <img src="pokémon cartas/carta.png" alt="">
+        <a href="pokémon cartas\carta pokémon.html">
+            <img src="pokémon cartas/carta.png" alt="">
+        </a>
+       
     </center>
 </nav>
 
