--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <a href="lego\lego.html">
             <img src="lego\lego.png" alt="">
         </a>
-        <a href="Pokemon\pokemon.html">
-            <img src="Pokemon\pokémon image.jpg" alt="">
+        <a href="Pokemon jogo\pokemon.html">
+            <img src="Pokemon jogo/pokémon image.jpg" alt="">
         </a>
         <a href=minecraft\minecraft.html>
             <img src="minecraft\image.png" alt="">
