--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -120,6 +120,28 @@ Depois de atacar, o turno passa para o oponente.
     Treine com alguém ou jogue no Pokémon TCG Live (versão digital gratuita).
 </p>
 
+<p>
+    um deck de cartas Pokémon competitivo ou casual exige estratégia.
+     Um bom deck tem um equilíbrio entre Pokémon, Energias e Cartas de Treinador.
+      Vou te explicar passo a passo como montar um deck de 60 cartas.
+</p>
+
+<p>
+    🎴 1. Estrutura básica de um deck
+    <br>
+Um deck deve conter exatamente 60 cartas e pode ter, no máximo, 4 cópias de qualquer carta com o mesmo nome (exceto cartas de energia básica).
+<br><br>
+A distribuição recomendada é:
+<br>
+✅ 16 a 20 Pokémon
+<br>
+✅ 25 a 30 Cartas de Treinador
+<br>
+✅ 10 a 15 Cartas de Energia
+<br><br>
+Essa estrutura pode variar dependendo da sua estratégia.
+</p>
+
 </div>
 
 
