--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -129,17 +129,153 @@ Depois de atacar, o turno passa para o oponente.
 <p>
     🎴 1. Estrutura básica de um deck
     <br>
-Um deck deve conter exatamente 60 cartas e pode ter, no máximo, 4 cópias de qualquer carta com o mesmo nome (exceto cartas de energia básica).
+    Um deck deve conter exatamente 60 cartas e pode ter, no máximo, 4 cópias de qualquer carta com o mesmo nome (exceto cartas de energia básica).
+    <br><br>
+    A distribuição recomendada é:
+    <br>
+    ✅ 16 a 20 Pokémon
+    <br>
+    ✅ 25 a 30 Cartas de Treinador
+    <br>
+    ✅ 10 a 15 Cartas de Energia
+    <br><br>
+    Essa estrutura pode variar dependendo da sua estratégia.
+</p>
+
+<p>
+    🏆 2. Escolha sua estratégia e tipo de deck
+    <br>
+    Antes de escolher as cartas, defina como seu deck vai funcionar. Aqui estão os principais tipos de estratégia:
+    <br><br>
+    Decks ofensivos – Focam em ataques poderosos e nocautes rápidos.
+    <br><br>
+    Decks de controle – Usam habilidades e cartas de treinador para limitar as ações do oponente.
+    <br><br>
+    Decks de defesa – Utilizam cura e resistência para durar mais turnos.
+    <br><br>
+    Decks de combinação – Trazem combos entre habilidades e cartas para maximizar o efeito.
+</p>
+
+<p>
+    🔥 3. Escolha seus Pokémon principais
+    <br>
+    Seu deck precisa de um Pokémon forte para ser o centro da estratégia. Considere:
+    <br><br>
+    Pokémon básicos poderosos (ex: Pokémon EX, V, ou VSTAR).
+    <br><br>
+    Pokémon de evolução (se for usar evolução, tenha pelo menos 3 cópias da fase básica).
+    <br><br>
+    Pokémon de suporte (que têm habilidades para acelerar energia ou comprar cartas).
+    <br><br>
+    🔹 Exemplo de distribuição:
+    <br><br>
+    3 a 4 Pokémon principais (Pokémon VSTAR, EX ou Evolutivos)
+    <br><br>
+    4 a 6 Pokémon básicos para suporte
+    <br><br>
+    2 a 3 Pokémon auxiliares para dar flexibilidade
+</p>
+
+<p>
+    🛠️ 4. Escolha as cartas de Treinador
+    <br>
+    As cartas de treinador ajudam a acelerar seu jogo. São divididas em:
+    <br><br>
+    1️⃣ Apoiadores – Fortes, mas só podem ser jogados uma vez por turno.
+    <br>
+    Exemplo: Professora Juniper (compra 7 cartas).
+    <br><br>
+    2️⃣ Itens – Podem ser jogados quantas vezes quiser por turno.
+    <br>
+    Exemplo: Ultra Ball (procura qualquer Pokémon no baralho).
+    <br><br>
+    3️⃣ Estádios – Alteram as regras do jogo enquanto estão em campo.
+    <br>
+    Exemplo: Praia Tropical (ajuda a comprar mais cartas).
+    <br><br>
+    🔹 Recomendação:
+    <br>
+    ✅ 4 a 8 Apoiadores
+    <br>
+    ✅ 10 a 15 Itens
+    <br>
+    ✅ 2 a 4 Estádios
+</p>
+
+<p>
+    ⚡ 5. Escolha a quantidade certa de energias
+    <br>
+    A energia é essencial para que os Pokémon possam atacar.
+    <br><br>
+    Decks de Pokémon EX podem precisar de menos energias porque há cartas que aceleram esse recurso.
+    <br><br>
+    Decks com Pokémon de evolução geralmente precisam de mais energias.
+    <br><br>
+    Decks de múltiplos tipos precisam de energias de diferentes cores ou cartas especiais como Energia Arco-Íris.
+    <br><br>
+    🔹 Recomendações:
+    <br>
+    ✅ 10 a 12 Energias em decks com muita aceleração de energia.
+    <br>
+    ✅ 12 a 15 Energias em decks mais lentos.
+</p>
+
+<p>
+    🔄 6. Teste, ajuste e melhore seu deck
+    <br>
+    Depois de montar seu deck, jogue partidas para ver se ele está funcionando bem. Algumas dicas para testar e melhorar:
+    <br><br>
+    ✔️ Simule partidas sozinho para ver se as cartas aparecem na ordem correta.
 <br><br>
-A distribuição recomendada é:
-<br>
-✅ 16 a 20 Pokémon
-<br>
-✅ 25 a 30 Cartas de Treinador
-<br>
-✅ 10 a 15 Cartas de Energia
+    ✔️ Jogue contra amigos ou no Pokémon TCG Live.
 <br><br>
-Essa estrutura pode variar dependendo da sua estratégia.
+    ✔️ Faça ajustes: Se as cartas não estão funcionando bem, troque por outras.    
+</p>
+
+<p>
+    🎯 Exemplo de deck competitivo (Deck de Charizard EX)
+    <br><br>
+🔥 Pokémon (16)
+<br><br>
+3x Charizard EX
+<br><br>
+3x Charmeleon
+<br><br>
+4x Charmander
+<br><br>
+2x Radiant Charizard
+<br><br>
+2x Bidoof
+<br><br>
+2x Bibarel
+<br><br>
+🔹 Treinadores (32)
+<br><br>
+4x Professor’s Research
+<br><br>
+4x Ultra Ball
+<br><br>
+4x Rare Candy
+<br><br>
+4x Boss’s Orders
+<br><br>
+4x Level Ball
+<br><br>
+2x Pal Pad
+<br><br>
+2x Escape Rope
+<br><br>
+2x Pokégear 3.0
+<br><br>
+2x Collapsed Stadium
+<br><br>
+4x Arven
+<br><br>
+⚡ Energia (12)
+<br><br>
+8x Energia de Fogo
+<br><br>
+4x Energia Dupla Turbo
 </p>
 
 </div>
