--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -13,8 +13,12 @@
         <h1>Esse site é para falar sobre cartas Pokémon</h1>
     </header>
 <div>
+ 
     <p>
      🎴 1. Componentes básicos do jogo
+     <br><br>
+     <img src="carta.png" alt="">
+     <br><br>
      <br><br>
      Você precisa de:
      Um baralho de 60 cartas (não pode ter mais de 4 cópias da mesma carta com o mesmo nome).
@@ -32,11 +36,12 @@
      Tapete de jogo (opcional, mas ajuda bastante).
     </p>
 
-    <p>🧑‍🤝‍🧑 2. Objetivo do jogo
-        <br><br>
-        Vença seu oponente pegando 6 cartas de prêmio.
-         Você pega uma carta de prêmio cada vez que derrota um Pokémon do oponente.
-        </p>
+    <p>
+     🧑‍🤝‍🧑 2. Objetivo do jogo
+     Vença seu oponente pegando 6 cartas de prêmio.
+     Você pega uma carta de prêmio cada vez que derrota um Pokémon do oponente.
+     
+    </p>
     <p>
      🔁 3. Preparação inicial
      <br><br>
@@ -53,48 +58,49 @@
      6. Decida quem começa com cara ou coroa (moeda ou dado).
     </p>
 
-  <p>⚔️ 4. Começo do turno
-    <br><br>
+    <p>
+     ⚔️ 4. Começo do turno
+     <br><br>
      Cada jogador faz isso no seu turno:
-    <br><br>
+     <br><br>
      Fase 1: Comprar carta
      Compre 1 carta do topo do baralho.
-    <br><br>
+     <br><br>
      Fase 2: Fase de preparação
      Você pode:
      <br><br>
      Colocar um Pokémon básico no Banco.
-    <br><br>
+     <br><br>
      Evoluir um Pokémon (se já estava em jogo no turno anterior).
-    <br><br>
+     <br><br>
      Anexar 1 carta de energia (por turno).
-    <br><br>
+     <br><br>
      Usar cartas de treinador (itens, apoiadores, estádios).
-    <br><br>
+     <br><br>
       Recuar seu Pokémon Ativo (gastar energia e trocá-lo com um do Banco).
-    <br><br>
+     <br><br>
      Fase 3: Ataque
      Use um ataque do seu Pokémon Ativo, se tiver energia suficiente.
      <br><br>
      Causar dano ao Pokémon Ativo do oponente.
      Se o Pokémon adversário for nocauteado, você pega 1 carta de prêmio (ou 2 se for um Pokémon-V).
-  </p>
-
-  <p>
-    🔄 5. Fim do turno
-    <br><br>
-Depois de atacar, o turno passa para o oponente.
-  </p>
-
-    <p>
-    ☠️ 6. Nocaute
-    <br>
-    Um Pokémon é nocauteado se tiver dano igual ou maior que sua vida (HP).
-    <br><br>
-    Vai para a pilha de descarte.
-    <br><br>
-    O oponente pega uma carta de prêmio.
     </p>
+
+   <p>
+     🔄 5. Fim do turno
+     <br><br>
+     Depois de atacar, o turno passa para o oponente.
+   </p>
+
+   <p>
+     ☠️ 6. Nocaute
+     <br>
+     Um Pokémon é nocauteado se tiver dano igual ou maior que sua vida (HP).
+     <br><br>
+     Vai para a pilha de descarte.
+     <br><br>
+     O oponente pega uma carta de prêmio.
+   </p>
 
     <p>
         🏆 7. Como vencer
@@ -122,7 +128,9 @@ Depois de atacar, o turno passa para o oponente.
 
 <p>
     um deck de cartas Pokémon competitivo ou casual exige estratégia.
+    <br>
      Um bom deck tem um equilíbrio entre Pokémon, Energias e Cartas de Treinador.
+     <br>
       Vou te explicar passo a passo como montar um deck de 60 cartas.
 </p>
 
@@ -232,52 +240,51 @@ Depois de atacar, o turno passa para o oponente.
     ✔️ Faça ajustes: Se as cartas não estão funcionando bem, troque por outras.    
 </p>
 
-<p>
+ <p>
     🎯 Exemplo de deck competitivo (Deck de Charizard EX)
     <br><br>
-🔥 Pokémon (16)
-<br><br>
-3x Charizard EX
-<br><br>
-3x Charmeleon
-<br><br>
-4x Charmander
-<br><br>
-2x Radiant Charizard
-<br><br>
-2x Bidoof
-<br><br>
-2x Bibarel
-<br><br>
-🔹 Treinadores (32)
-<br><br>
-4x Professor’s Research
-<br><br>
-4x Ultra Ball
-<br><br>
-4x Rare Candy
-<br><br>
-4x Boss’s Orders
-<br><br>
-4x Level Ball
-<br><br>
-2x Pal Pad
-<br><br>
-2x Escape Rope
-<br><br>
-2x Pokégear 3.0
-<br><br>
-2x Collapsed Stadium
-<br><br>
-4x Arven
-<br><br>
-⚡ Energia (12)
-<br><br>
-8x Energia de Fogo
-<br><br>
-4x Energia Dupla Turbo
-</p>
-
+    🔥 Pokémon (16)
+    <br><br>
+    3x Charizard EX
+    <br><br>
+    3x Charmeleon
+    <br><br>
+    4x Charmander
+    <br><br>
+    2x Radiant Charizard
+    <br><br>
+    2x Bidoof
+    <br><br>
+    2x Bibarel
+    <br><br>
+    🔹 Treinadores (32)
+    <br><br>
+    4x Professor’s Research
+    <br><br>
+    4x Ultra Ball
+    <br><br>
+    4x Rare Candy
+    <br><br>
+    4x Boss’s Orders
+    <br><br>
+    4x Level Ball
+    <br><br>
+    2x Pal Pad
+    <br><br>
+    2x Escape Rope
+    <br><br>
+    2x Pokégear 3.0
+ <br><br>
+ 2x Collapsed Stadium
+ <br><br>
+ 4x Arven
+ <br><br>
+ ⚡ Energia (12)
+ <br><br>
+ 8x Energia de Fogo
+ <br><br>
+ 4x Energia Dupla Turbo
+ </p>
 </div>
 
 
