--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -17,19 +17,24 @@
     <p>
      🎴 1. Componentes básicos do jogo
      <br><br>
-     <img src="carta.png" alt="">
-     <br><br>
-     <br><br>
      Você precisa de:
      Um baralho de 60 cartas (não pode ter mais de 4 cópias da mesma carta com o mesmo nome).
+     <br><br>
+     <img src="carta.png" alt="">
      <br><br>
      Cartas podem ser de três tipos:
      <br><br>
      Pokémon
      <br><br>
+     <img src="magmar.png" alt="">
+     <br><br>
      Energia
      <br><br>
+     <img src="energia.png" alt="">
+     <br><br>
      Treinador
+     <br><br>
+     <img src="apoiador.png" alt="">
      <br><br>
      Marcadores de dano e possivelmente moedas ou dado.
      <br><br>
@@ -51,6 +56,8 @@
      <br><br>
      3. Coloque um Pokémon básico como Pokémon Ativo (frente do campo).
      <br><br>
+     <img src="magmar.png" alt="">
+     <br><br>
      4. Você pode colocar até 5 Pokémon básicos no Banco (parte de trás do campo).
      <br><br>
      5. Coloque 6 cartas viradas para baixo como cartas de prêmio.
@@ -66,16 +73,25 @@
      Fase 1: Comprar carta
      Compre 1 carta do topo do baralho.
      <br><br>
+     <img src="carta.png" alt="">
+     <br><br>
      Fase 2: Fase de preparação
      Você pode:
      <br><br>
      Colocar um Pokémon básico no Banco.
      <br><br>
-     Evoluir um Pokémon (se já estava em jogo no turno anterior).
+     <img src="magmar.png" alt="">
      <br><br>
-     Anexar 1 carta de energia (por turno).
+     Evoluir um Pokémon (se já estava em jogo no turno anterior).
+     <img src="magmortar.png" alt="">
+     <br><br>
+     Anexar 1 carta de energia (uma por turno).
+     <br><br>
+     <img src="energia.png" alt="">
      <br><br>
      Usar cartas de treinador (itens, apoiadores, estádios).
+     <br><br>
+     <img src="apoiador.png" alt="">
      <br><br>
       Recuar seu Pokémon Ativo (gastar energia e trocá-lo com um do Banco).
      <br><br>
@@ -83,7 +99,7 @@
      Use um ataque do seu Pokémon Ativo, se tiver energia suficiente.
      <br><br>
      Causar dano ao Pokémon Ativo do oponente.
-     Se o Pokémon adversário for nocauteado, você pega 1 carta de prêmio (ou 2 se for um Pokémon-V).
+     Se o Pokémon adversário for nocauteado, você pega 1 carta de prêmio (ou 2 se for um Pokémon-ex).
     </p>
 
    <p>
@@ -97,7 +113,11 @@
      <br>
      Um Pokémon é nocauteado se tiver dano igual ou maior que sua vida (HP).
      <br><br>
+     <img src="magmar.png" alt="">
+     <br><br>
      Vai para a pilha de descarte.
+     <br><br>
+     <img src="carta.png" alt="">
      <br><br>
      O oponente pega uma carta de prêmio.
    </p>
@@ -108,6 +128,8 @@
         Você vence se:
         <br><br>
         Pegar as 6 cartas de prêmio;
+        <br><br>
+        <img src="carta.png" alt="">
         <br><br>
         O oponente não tiver Pokémon no campo ao final do seu turno;
         <br><br>
