--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -83,6 +83,7 @@
      <img src="magmar.png" alt="">
      <br><br>
      Evoluir um Pokémon (se já estava em jogo no turno anterior).
+     <br><br>
      <img src="magmortar.png" alt="">
      <br><br>
      Anexar 1 carta de energia (uma por turno).
@@ -161,13 +162,21 @@
     <br>
     Um deck deve conter exatamente 60 cartas e pode ter, no máximo, 4 cópias de qualquer carta com o mesmo nome (exceto cartas de energia básica).
     <br><br>
+    <img src="magmar.png" alt="">
+    <br><br>
     A distribuição recomendada é:
     <br>
     ✅ 16 a 20 Pokémon
-    <br>
+    <br><br>
+    <img src="magmar.png" alt="">
+    <br><br>
     ✅ 25 a 30 Cartas de Treinador
-    <br>
+    <br><br>
+    <img src="apoiador.png" alt="">
+    <br><br>
     ✅ 10 a 15 Cartas de Energia
+    <br><br>
+    <img src="energia.png" alt="">
     <br><br>
     Essa estrutura pode variar dependendo da sua estratégia.
 </p>
@@ -191,7 +200,7 @@
     <br>
     Seu deck precisa de um Pokémon forte para ser o centro da estratégia. Considere:
     <br><br>
-    Pokémon básicos poderosos (ex: Pokémon EX, V, ou VSTAR).
+    Pokémon básicos poderosos (ex: Pokémon EX).
     <br><br>
     Pokémon de evolução (se for usar evolução, tenha pelo menos 3 cópias da fase básica).
     <br><br>
@@ -199,7 +208,7 @@
     <br><br>
     🔹 Exemplo de distribuição:
     <br><br>
-    3 a 4 Pokémon principais (Pokémon VSTAR, EX ou Evolutivos)
+    3 a 4 Pokémon principais (Pokémon EX ou Evolutivos)
     <br><br>
     4 a 6 Pokémon básicos para suporte
     <br><br>
@@ -208,6 +217,8 @@
 
 <p>
     🛠️ 4. Escolha as cartas de Treinador
+    <br><br>
+    <img src="apoiador.png" alt="">
     <br>
     As cartas de treinador ajudam a acelerar seu jogo. São divididas em:
     <br><br>
@@ -226,10 +237,16 @@
     🔹 Recomendação:
     <br>
     ✅ 4 a 8 Apoiadores
-    <br>
+    <br><br>
+    <img src="apoiador.png" alt="">
+    <br><br>
     ✅ 10 a 15 Itens
-    <br>
+    <br><br>
+    <img src="item.png" alt="">
+    <br><br>
     ✅ 2 a 4 Estádios
+    <br><br>
+    <img src="estádio.png" alt="">
 </p>
 
 <p>
@@ -265,48 +282,57 @@
  <p>
     🎯 Exemplo de deck competitivo (Deck de Charizard EX)
     <br><br>
-    🔥 Pokémon (16)
+    3 Charizard ex
     <br><br>
-    3x Charizard EX
+    <img src="charizard ex.png" alt="">
     <br><br>
-    3x Charmeleon
+    3 Charmeleon
     <br><br>
-    4x Charmander
+    <img src="charmeleon.png" alt="">
     <br><br>
-    2x Radiant Charizard
+    4 Charmander
     <br><br>
-    2x Bidoof
+    <img src="charmander.png" alt="">
     <br><br>
-    2x Bibarel
+    2 Pidgeot ex
     <br><br>
-    🔹 Treinadores (32)
+    <img src="pidgeot ex.png" alt="">
     <br><br>
-    4x Professor’s Research
-    <br><br>
-    4x Ultra Ball
-    <br><br>
-    4x Rare Candy
-    <br><br>
-    4x Boss’s Orders
-    <br><br>
-    4x Level Ball
-    <br><br>
-    2x Pal Pad
-    <br><br>
-    2x Escape Rope
-    <br><br>
-    2x Pokégear 3.0
- <br><br>
- 2x Collapsed Stadium
- <br><br>
- 4x Arven
- <br><br>
- ⚡ Energia (12)
- <br><br>
- 8x Energia de Fogo
- <br><br>
- 4x Energia Dupla Turbo
+    2 Pidgeotto
+
+    3 Pidgey
+
+    3 Moltres
+
+    4 Kissera
+
+    2 Arven
+
+    2 Ordem da Chefia (Ghetsis)
+
+    2 Pesquisa de Professores (Profª Arka)
+
+    2 Artazon
+
+    4 Poffin de Colega
+
+    4 Doce Raro
+
+    4 Ultra Bola
+
+    1 Pegador Superior
+
+    1 Supervara
+
+    1 Substituição
+
+    2 Máquina Técnica: Evolução
+
+    1 Faixa de Desafio
+
+    10 Energia Básica de Fogo
  </p>
+ 
 </div>
 
 
