--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -299,38 +299,73 @@
     <img src="pidgeot ex.png" alt="">
     <br><br>
     2 Pidgeotto
-
+    <br><br>
+    <img src="pidgeotto.png" alt="">
+    <br><br>
     3 Pidgey
-
+    <br><br>
+    <img src="pidgey.png" alt="">
+    <br><br>
     3 Moltres
-
+    <br><br>
+    <img src="moltres.png" alt="">
+    <br><br>
     4 Kissera
-
+    <br><br>
+    <img src="kissera.png" alt="">
+    <br><br>
     2 Arven
-
+    <br><br>
+    <img src="arven.png" alt="">
+    <br><br>
     2 Ordem da Chefia (Ghetsis)
-
+    <br><br>
+    <img src="ordem da chefia.png" alt="">
+    <br><br>
     2 Pesquisa de Professores (Profª Arka)
-
+    <br><br>
+    <img src="pesquisa de professores.png" alt="">
+    <br><br>
     2 Artazon
-
+    <br><br>
+    <img src="artazon.png" alt="">
+    <br><br>
     4 Poffin de Colega
-
+    <br><br>
+    <img src="poffin de colega.png" alt="">
+    <br><br>
     4 Doce Raro
-
+    <br><br>
+    <img src="doce raro.png" alt="">
+    <br><br>
     4 Ultra Bola
-
+    <br><br>
+    <img src="ultra bola.png" alt="">
+    <br><br>
     1 Pegador Superior
-
+    <br><br>
+    <img src="Pegador Superior.png" alt="">
+    <br><br>
     1 Supervara
-
+    <br><br>
+    <img src="Supervara .png" alt="">
+    <br><br>
     1 Substituição
-
+    <br><br>
+    <img src="substituição.png" alt="">
+    <br><br>
     2 Máquina Técnica: Evolução
-
+    <br><br>
+    <img src="Máquina Técnica evolução.png" alt="">
+    <br><br>
     1 Faixa de Desafio
-
+    <br><br>
+    <img src="Faixa de Desafio.png" alt="">
+    <br><br>
     10 Energia Básica de Fogo
+    <br><br>
+    <img src="energia de fogo.png" alt="">
+    <br><br>
  </p>
  
 </div>
