--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="minecraft\image.png" alt="">
         </a>
         <a href="pokémon cartas\carta pokémon.html">
-            <img src="pokémon cartas/carta.png" alt="">
+            <img src="pokémon cartas/imagens/carta.png" alt="">
         </a>
        
     </center>
