--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a href="pokémon cartas\carta pokémon.html">
             <img src="pokémon cartas/imagens/carta.png" alt="">
         </a>
-       
+       <a href="carta pokemon video\video pokémon.html"></a>
+            <img src="carta pokemon video\pokebola.png" alt="">
     </center>
 </nav>
 
