--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <a href="pokémon cartas\carta pokémon.html">
             <img src="pokémon cartas/imagens/carta.png" alt="">
         </a>
-       <a href="carta pokemon video\video pokémon.html"></a>
+       <a href="carta pokemon video\video pokémon.html">
             <img src="carta pokemon video\pokebola.png" alt="">
+        </a>
     </center>
 </nav>
 
