--- a/carta pokemon video/video pokémon.html
+++ b/carta pokemon video/video pokémon.html
@@ -55,5 +55,8 @@
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <footer>
+            © 2025 XP Point. Este site não é afiliado à nenhuma empresa.
+        </footer>
 </body>
 </html>
