--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -423,7 +423,9 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        © 2025 XP Point. Este site não é afiliado à nenhuma empresa.
+    </footer>
 
 </body>
 </html>
