--- a/carta pokemon video/video pokémon.html
+++ b/carta pokemon video/video pokémon.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>carta_pokemon</title>
+    <title>busca_clefairy</title>
     <link rel="shortcut icon" href="pokebola.png" type="image/x-icon">
     <link rel="stylesheet" href="style3.css">
 </head>
 <body>
  <header>
     <img src="pokebola.png" alt="">
-    <h1>aqui estão vários videos sobre carta pokémon</h1>
+    <h1>aqui estão vários videos sobre a busca pela clefairy</h1>
     <img src="pokebola.png" alt="">
  </header>   
         <div>
@@ -51,6 +51,13 @@
         <div>
             <h2>este é o video 6</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/xfoHPs5h6_c?si=gvnaiI7RTvTGaPJE"
+            title="YouTube video player" frameborder="0" allow="accelerometer;
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div>
+            <h2>este é o video 7</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Pu2UME5rDCA?si=-RHi5uza0kRVMgPh"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
