--- a/carta pokemon video/video pokémon.html
+++ b/carta pokemon video/video pokémon.html
@@ -10,60 +10,60 @@
 <body>
  <header>
     <img src="pokebola.png" alt="">
-    <h1>aqui estão vários videos sobre a busca pela clefairy</h1>
+    <h1>A Caçada Pela Clefairy: <br> Os Melhores Vídeos Que Você Precisa Ver!</h1>
     <img src="pokebola.png" alt="">
  </header>   
         <div>
-            <h2>este é o video 1</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/6GHrMtbCPRM?si=CkGVJ8DIsvQzYZNj"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <hr>
         <div>
-            <h2>este é o video 2</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/GAuAI8cFRbE?si=ujtQWZo2jhMegWAH"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <hr>
         <div>
-            <h2>este é o video 3</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UuO3GSWmiBY?si=Yn2kZToNHHa3nKHK"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <hr>
         <div>
-            <h2> este é o video 4</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/3LLQoq-Kv1s?si=tgDPmGjar9sbnJUB"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <hr>
         <div>
-            <h2>este é o video 5</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/u9jgfsfKPQU?si=V5P4mM-MR2Gwj2Hn"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <hr>
         <div>
-            <h2>este é o video 6</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/xfoHPs5h6_c?si=gvnaiI7RTvTGaPJE"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        <hr>
         <div>
-            <h2>este é o video 7</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Pu2UME5rDCA?si=-RHi5uza0kRVMgPh"
             title="YouTube video player" frameborder="0" allow="accelerometer;
             autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+
         <footer>
-            © 2025 XP Point. Este site não é afiliado à nenhuma empresa.
+            ©2025 XP Point.
         </footer>
 </body>
 </html>
