--- a/pokémon cartas/carta pokémon.html
+++ b/pokémon cartas/carta pokémon.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="imagens/pokebola.png" alt="">
-        <h1>Tudo Sobre TCG - O Mundo das Cartas de Pokémon </h1>
+        <h1>Tudo Sobre TCG: <br> O Mundo das Cartas de Pokémon </h1>
         <img src="imagens/pokebola.png" alt="">
     </header>
     <div class="main">
@@ -102,7 +102,7 @@
                <li>Usar cartas de treinador (itens, apoiadores, estádios).</li>
                <li>Recuar seu Pokémon Ativo (gastar energia e trocá-lo com um do Banco).</li> 
         </ul>
-
+        
         <img src="imagens/magmar.png" alt="">
         <img src="imagens/magmortar.png" alt="">
         <img src="imagens/energia de fogo.png" alt="">
