--- a/carta pokemon video/video pokémon.html
+++ b/carta pokemon video/video pokémon.html
@@ -6,6 +6,16 @@
     <title>busca_clefairy</title>
     <link rel="shortcut icon" href="pokebola.png" type="image/x-icon">
     <link rel="stylesheet" href="style3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Raleway&display=swap" rel="stylesheet">
+
+
+
+
+
+
+
+
+
 </head>
 <body>
  <header>
