--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
        <a href="carta pokemon video\video pokémon.html">
             <img src="carta pokemon video\pokebola.png" alt="">
         </a>
+        <a href="xp_point.github.io\site jogos\index.html">
+        <img src="site jogos/imagens/bloco_terra.png" alt="">
+        </a>
     </center>
 </nav>
 
