--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <a href="site jogos\index.html">
             <img src="site jogos/imagens/bloco_terra.png" alt="">
         </a>
+        <a href="mundo_novo/new world.html"></a>
+            <img src="mundo_novo/img/amigos de jornada.png" alt="">
     </center>
 </nav>
 
