--- a/mundo_novo/new world.html
+++ b/mundo_novo/new world.html
@@ -10,8 +10,25 @@
 <body>
 
     <header>
-        <h1>the new world <br><br> </h1>
-        <h2> <br><br> aqui você vai ver coisas legais</h2>
+    <h1>the new world <br><br> </h1>
+    <h2> <br><br> aqui você vai ver coisas legais</h2>
+    <nav class="navbar">
+
+        <div class="logo"><img src="img/logo-removebg-preview.png" alt=""></div>
+
+        <ul class="nav-links">
+
+            <li><a href="#deck_de_lucario">Deck de Lucario</a></li>
+
+            <li><a href="#deckbox3">deckbox</a></li>
+
+            <li><a href="#meus_pokemon">meu time pokémon</a></li>
+
+            <li><a href="#">Contato</a></li>
+
+        </ul>   
+
+    </nav>
     </header>
     <div>
         <center>
@@ -20,7 +37,7 @@
         <h2>Obrigado por compartilhar seu deck! Vamos analisá-lo por partes e ver se está bem balanceado, competitivo e sinérgico para o Pokémon TCG. Aqui está a avaliação:</h2>
 
     </div>
-          <div>
+          <div id="deck_de_lucario">
                 <h3>
                     🔍 Análise Geral do Deck <br>
                     Tipo predominante: Lutador 🥊
