--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <a href="site jogos\index.html">
             <img src="site jogos/imagens/bloco_terra.png" alt="">
         </a>
-        <a href="mundo_novo/new world.html"></a>
+        <a href="mundo_novo/new world.html">
             <img src="mundo_novo/img/amigos de jornada.png" alt="">
+        </a>
     </center>
 </nav>
 
